# windows-users-rs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  codecov.yml
src/: error.rs  groups.rs  lib.rs  user.rs  user_manager.rs  user_ops.rs  users_list.rs  utils.rs
src/groups/: sid.rs  types.rs
src/groups/sid/: well_known_sid.rs
src/user/: operations.rs  types.rs
src/user/types/: logon_hours.rs  sid_type.rs  user_account_flags.rs  user_auth_flags.rs  user_privilege.rs
src/user_ops/: update_ops.rs
src/user_ops/update_ops/: net_user_info_level.rs
src/users_list/: user_filter_flag.rs
src/utils/: account_lookup.rs  convert.rs  pwstr.rs  sid.rs  times.rs  wide.rs  windows_result.rs
tests/: groups_tests.rs  user_manager_tests.rs  users_list_tests.rs  users_tests.rs
tests/helpers/: auto_remove_group.rs  auto_remove_user.rs  build.rs  constants.rs  mod.rs  utils.rs
