[package]
name = "windows_users"
authors = ["lhenry-dev <lhenry.dev1@gmail.com>"]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "A crate for managing Windows local users and groups."
license = "MIT/Apache-2.0"
keywords = ["windows", "ffi", "win32", "users", "groups"]
categories = ["external-ffi-bindings", "os::windows-apis"]
readme = "README.md"
repository = "https://github.com/lhenry-dev/windows-users-rs"
documentation = "https://docs.rs/windows_users/latest/windows_users/"
homepage = "https://crates.io/crates/windows_users"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = [
    "aarch64-pc-windows-msvc",
    "i686-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
]

[dependencies]
bitflags = "2.11.1"
chrono = "0.4.44"
getset = "0.1.6"
scopeguard = "1.2.0"
thiserror = "2.0.18"
typed-builder = "0.23.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_System_Com",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_WindowsProgramming"
] }

[dev-dependencies]
hostname = "0.4.2"
